<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="raphaelsantos.ramo_ieee_cefet_rj.Activities.HistoryActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/ieee_banner"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <TextView
                android:text="@string/history_sect1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/histSect1" />
            <TextView
                android:text="@string/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/histBody1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/single_line_offwhite"/>

            <TextView
                android:text="@string/history_sect2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/histSect2" />
            <TextView
                android:text="@string/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/histBody2" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/single_line_offwhite"/>

            <TextView
                android:text="@string/history_sect3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/histSect3" />
            <TextView
                android:text="@string/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/histBody3" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/single_line_offwhite"/>

            <TextView
                android:text="@string/history_sect4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/histSect4" />
            <TextView
                android:text="@string/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/histBody4" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/single_line_offwhite"/>

            <TextView
                android:text="@string/history_sect5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/histSect5" />
            <TextView
                android:text="@string/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/histBody5" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/single_line_offwhite"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Faça parte dessa história"
                android:id="@+id/applyingfor" />
            </LinearLayout>


    </ScrollView>
</LinearLayout>